--- a/server/package.json
+++ b/server/package.json
@@ -1,94 +1,38 @@
 {
-  "name": "app",
-  "version": "0.1.0",
-  "private": true,
-  "engines": {
-    "node": ">=16.0.0 <17.0.0"
+  "name": "server",
+  "version": "1.0.0",
+  "main": "index.js",
+  "scripts": {
+    "start": "node index.mjs",
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "lint": "eslint .",
+    "format": "prettier --single-quote --check .",
+    "prepare": "cd ../ && husky install server/.husky",
+    "dev": "nodemon --experimental-modules index.mjs"
   },
   "dependencies": {
-    "@leafygreen-ui/a11y": "^1.3.4",
-    "@leafygreen-ui/badge": "^5.0.1",
-    "@leafygreen-ui/banner": "^4.0.1",
-    "@leafygreen-ui/box": "^3.1.1",
-    "@leafygreen-ui/button": "^15.0.2",
-    "@leafygreen-ui/callout": "^5.0.1",
-    "@leafygreen-ui/card": "^6.0.1",
-    "@leafygreen-ui/checkbox": "^8.0.3",
-    "@leafygreen-ui/code": "^11.0.1",
-    "@leafygreen-ui/combobox": "^1.2.2",
-    "@leafygreen-ui/confirmation-modal": "^3.1.4",
-    "@leafygreen-ui/copyable": "^4.0.2",
-    "@leafygreen-ui/emotion": "^4.0.3",
-    "@leafygreen-ui/expandable-card": "^0.9.6",
-    "@leafygreen-ui/form-footer": "^0.10.3",
-    "@leafygreen-ui/hooks": "^7.4.0",
-    "@leafygreen-ui/icon": "^11.12.4",
-    "@leafygreen-ui/icon-button": "^12.0.0",
-    "@leafygreen-ui/inline-definition": "^4.1.1",
-    "@leafygreen-ui/interaction-ring": "^3.0.0",
-    "@leafygreen-ui/leafygreen-provider": "^2.3.5",
-    "@leafygreen-ui/lib": "^9.5.2",
-    "@leafygreen-ui/logo": "^6.3.0",
-    "@leafygreen-ui/marketing-modal": "^3.0.10",
-    "@leafygreen-ui/menu": "^13.1.1",
-    "@leafygreen-ui/modal": "^9.0.2",
-    "@leafygreen-ui/mongo-menu": "^3.0.3",
-    "@leafygreen-ui/mongo-nav": "^9.4.2",
-    "@leafygreen-ui/palette": "^3.4.7",
-    "@leafygreen-ui/pipeline": "^2.2.1",
-    "@leafygreen-ui/popover": "^8.0.1",
-    "@leafygreen-ui/portal": "^4.0.9",
-    "@leafygreen-ui/radio-box-group": "^8.0.2",
-    "@leafygreen-ui/radio-group": "^8.1.2",
-    "@leafygreen-ui/ripple": "^1.1.8",
-    "@leafygreen-ui/segmented-control": "^2.0.1",
-    "@leafygreen-ui/select": "^5.0.3",
-    "@leafygreen-ui/side-nav": "^9.0.3",
-    "@leafygreen-ui/stepper": "^3.1.6",
-    "@leafygreen-ui/table": "^4.1.1",
-    "@leafygreen-ui/tabs": "^7.0.1",
-    "@leafygreen-ui/testing-lib": "^0.2.1",
-    "@leafygreen-ui/text-area": "^6.2.1",
-    "@leafygreen-ui/text-input": "^9.0.0",
-    "@leafygreen-ui/theme": "^3.0.1",
-    "@leafygreen-ui/toast": "^1.0.1",
-    "@leafygreen-ui/toggle": "^8.0.6",
-    "@leafygreen-ui/tokens": "^1.4.1",
-    "@leafygreen-ui/tooltip": "^7.1.3",
-    "@leafygreen-ui/typography": "^12.0.0",
-    "@types/jest": "^27.5.2",
-    "@types/node": "^16.18.12",
-    "@types/react": "^17.0.0",
-    "@types/react-dom": "^17.0.0",
-    "react": "^17.0.0",
-    "react-dom": "^17.0.0",
-    "react-router-dom": "^6.8.1",
-    "react-scripts": "4.0.3",
-    "typescript": "^4.9.5",
-    "web-vitals": "^2.1.4"
+    "cors": "^2.8.5",
+    "dotenv": "^8.2.0",
+    "express": "^4.18.2",
+    "express-async-errors": "^3.1.1",
+    "mongodb": "^4.13.0"
   },
-  "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
+  "devDependencies": {
+    "eslint": "^8.0.0",
+    "husky": "^7.0.2",
+    "lint-staged": "^11.2.3",
+    "nodemon": "^2.0.12",
+    "prettier": "^2.4.1"
   },
-  "eslintConfig": {
-    "extends": [
-      "react-app",
-      "react-app/jest"
-    ]
+  "husky": {
+    "hooks": {
+      "pre-commit": "lint-staged"
+    }
   },
-  "browserslist": {
-    "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all"
-    ],
-    "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
+  "lint-staged": {
+    "*.js": [
+      "prettier --single-quote --write",
+      "eslint --fix"
     ]
   }
 }
