--- a/client/package.json
+++ b/client/package.json
@@ -6,16 +6,10 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint",
-    "server": "node ./server/index.mjs"
+    "lint": "next lint"
   },
   "dependencies": {
-    "cors": "^2.8.5",
     "dotenv": "^16.4.5",
-    "express": "^4.19.2",
-    "express-async-errors": "^3.1.1",
-    "mongodb": "^6.5.0",
-    "mongoose": "^8.2.3",
     "next": "14.1.4",
     "react": "^18",
     "react-dom": "^18"
