--- a/client/package.json
+++ b/client/package.json
@@ -12,9 +12,12 @@
     "@radix-ui/react-slot": "^1.0.2",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
+    "context": "^3.0.28",
     "dotenv": "^16.4.5",
+    "framer-motion": "^11.0.24",
     "lucide-react": "^0.363.0",
     "next": "14.1.4",
+    "radix-ui": "^1.0.1",
     "react": "^18",
     "react-dom": "^18",
     "tailwind-merge": "^2.2.2",
