--- a/client/package.json
+++ b/client/package.json
@@ -14,6 +14,7 @@
     "clsx": "^2.1.0",
     "context": "^3.0.28",
     "dotenv": "^16.4.5",
+    "embla-carousel-react": "^8.0.0",
     "framer-motion": "^11.0.24",
     "lucide-react": "^0.363.0",
     "next": "14.1.4",
