--- a/client/package.json
+++ b/client/package.json
@@ -19,6 +19,7 @@
     "embla-carousel-react": "^8.0.0",
     "framer-motion": "^11.0.24",
     "lucide-react": "^0.363.0",
+    "mongodb": "^6.5.0",
     "next": "14.1.4",
     "radix-ui": "^1.0.1",
     "react": "^18",
